fix(create form): vertical align of icons inside final-action-btn

--- a/src/app/styles/modules/_buttons.less
+++ b/src/app/styles/modules/_buttons.less
@@ -2,4 +2,8 @@
   height: 34px;
   font-size: 15px;
   margin-top: 30px;
+
+  i {
+    vertical-align: middle;
+  }
 }
